fix(front): x in close button on safari displaced

--- a/front/src/styles/overrides.less
+++ b/front/src/styles/overrides.less
@@ -68,10 +68,12 @@
     }
 
     .ant-notification-notice-close {
+      .center-vertically();
       border: 2px solid @primary-color;
       border-radius: @border-radius-regular;
       padding: 0px @padding-tiny;
-  
+      height: 30px;
+      
       &:hover {
         border-color: darken(@primary-color, 15%);
       }
